distros/T/Test-UsedModules/t/resource/lib/Test/UsedModules/Fail/4.pm
package Test::UsedModules::Fail::4;
use strict;
use warnings;
use utf8;

require File::Spec;

1;
